hphp/hack/test/typecheck/uninstantiable_anon_return2.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

abstract final class C {}

function foo(): void {
  $_ = (): ?C ==> {
    return null;
  };
}
